This commit updates the package-lock.json file with the necessary dependencies and configuration for Cypress version 13.10.0. Dependencies like @cypress/request, @cypress/xvfb, check-more-types, bluebird, and others were also added as part of this package inclusion. Additionally, there are changes in dependency versions of a few existing packages. This will facilitate integration testing in the codebase.

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,7 +1,7 @@
-<div>
-  <input type="text" [(ngModel)]="id" placeholder="Enter message ID">
-  <input type="text" [(ngModel)]="message" placeholder="Enter message content">
-  <button (click)="getMessage()">Get Message</button>
+<div class="message_form">
+  <input type="text" [(ngModel)]="id" placeholder="Enter message ID" class="message-id-input">
+  <input type="text" [(ngModel)]="message" placeholder="Enter message content" class="message-value">
+  <button (click)="getMessage()" class="get-message-button">Get Message</button>
   <button (click)="createMessage()">Create Message</button>
   <button (click)="updateMessage()">Update Message</button>
 </div>
